--- a/Challenge 6/style.css
+++ b/Challenge 6/style.css
@@ -1,8 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* Navbar container */
@@ -45,6 +44,8 @@
 }
 
 .menu-item {
+    display: flex;
+    justify-content: center;
     padding: 0px 25px;
     font-size: 20px;
 }
@@ -76,5 +77,5 @@ button {
     border: none;
     border-radius: 4px;
     font-size: 15px;
-     font-family: monospace;
+    font-family: monospace;
 }
